--- a/hoja_de_vida.html
+++ b/hoja_de_vida.html
@@ -77,14 +77,14 @@
             <div class="sobre"> 
                 <h2 class="titulo2">Educacion</h2>
                         <h4>2013 - 2020</h4>
-                        <h3>Pregrado En Economía</h3>
-                        <h3>Universidad Del Norte</h3>
+                        <p>Pregrado En Economía</p>
+                        <p>Universidad Del Norte</p>
                         <h4>2020 - 2020</h4>
-                        <h3>Diplomado en Análisis Técnico</h3>
-                        <h3>Universidad Del Rosario / 21 Trading Coach</h3>
+                        <p>Diplomado en Análisis Técnico</p>
+                        <p>Universidad Del Rosario / 21 Trading Coach</p>
                         <h4>2021 - 2022</h4>
-                        <h3>Diplomado en Programación</h3>
-                        <h3>Universidad Del Norte / Misión Tic 2022</h3>
+                        <p>Diplomado en Programación</p>
+                        <p>Universidad Del Norte / Misión Tic 2022</p>
                     
             </div>
             <div class="sobre"> 
