--- a/hoja_de_vida.html
+++ b/hoja_de_vida.html
@@ -19,6 +19,16 @@
             </div>
 
             <div class="info_contacto">
+                <h3 class="titulo">Perfil</h3>
+                <ul>
+                    <li>
+                        <span class="icono"></span>
+                        <span class="texto">Soy una persona enfocada en aprender cada día más nuevas habilidades
+                            que me enriquezcan a nivel profesional y personal,que cuenta con gran motivación
+                            y que se desempeña satisfactoriamente en el trabajo en equipo.</span>
+            </div>
+
+            <div class="info_contacto">
                 <h3 class="titulo">Perfil Profesional</h3>
                 <ul>
                     <li>
@@ -100,12 +110,6 @@
                 <p>Conocimiento en Manejo de Bases de datos SQL</p>
                 <p>Conocimiento en Librerias De Análisis de datos En python Numpy, Pandas y Matplotlib</p>
                 <p>Manejo De Git y GitHub Basico</p>    
-            </div>
-            <div class="sobre"> 
-                <h2 class="titulo2">Perfil</h2>
-                <p>Soy una persona enfocada en aprender cada día más nuevas habilidades
-                que me enriquezcan a nivel profesional y personal,que cuenta con gran motivación
-                y que se desempeña satisfactoriamente en el trabajo en equipo.</p>
             </div>
             <div class="sobre"> 
                 <h2 class="titulo2">Logros</h2>
