--- a/hoja_de_vida.html
+++ b/hoja_de_vida.html
@@ -119,6 +119,20 @@
                 <h2 class="titulo2">Intereses</h2>
                 <p>Hacer Trading, Programar, Videojuegos,  Ver Plataformas de Streaming, Leer, Tocar piano, Educarme continuamente.</p>
             </div>
+            <div class="sobre"> 
+                <h2 class="titulo2">Credenciales</h2>
+                <ul>
+                    <li>
+                    <a href="/Acta de grado.pdf">Acta de grado</a>
+                    </li>
+                    <li>
+                    <a href="/Diploma.pdf">Diploma academico</a>
+                    </li>
+                    <li>
+                    <a href="/Diplomado Análisis técnico.pdf">Diplomado análisis técnico</a>
+                    </li>
+                </ul>   
+            </div>
         </div>
 </body>
 </html>
