--- a/hoja_de_vida.html
+++ b/hoja_de_vida.html
@@ -123,13 +123,13 @@
                 <h2 class="titulo2">Credenciales</h2>
                 <ul>
                     <li>
-                    <a href="/Acta de grado.pdf">Acta de grado</a>
+                    <a href="Acta de grado.pdf">Acta de grado</a>
                     </li>
                     <li>
-                    <a href="/Diploma.pdf">Diploma academico</a>
+                    <a href="Diploma.pdf">Diploma academico</a>
                     </li>
                     <li>
-                    <a href="/Diplomado Análisis técnico.pdf">Diplomado análisis técnico</a>
+                    <a href="Diplomado Análisis técnico.pdf">Diplomado análisis técnico</a>
                     </li>
                 </ul>   
             </div>
