--- a/hoja_de_vida.html
+++ b/hoja_de_vida.html
@@ -13,19 +13,9 @@
         <div class="lado_izquierdo">
             <div class="perfil_texto">
                 <div class="imagen_caja">
-                    <img src="Foto Alonso.jfif">
+                    <img src="foto alonso 2.PNG">
                 </div>
-                <h2> Alonso Linero Gnecco<br><span>Economista / Programador</span></h2>
-            </div>
-
-            <div class="info_contacto">
-                <h3 class="titulo">Perfil</h3>
-                <ul>
-                    <li>
-                        <span class="icono"></span>
-                        <span class="texto">Soy una persona enfocada en aprender cada día más nuevas habilidades
-                            que me enriquezcan a nivel profesional y personal,que cuenta con gran motivación
-                            y que se desempeña satisfactoriamente en el trabajo en equipo.</span>
+                <h2> Alonso Linero Gnecco<br><span>Analista De Datos</span></h2>
             </div>
 
             <div class="info_contacto">
@@ -35,7 +25,9 @@
                         <span class="icono"></span>
                         <span class="texto">Soy Economísta de la universidad del Norte con Diplomados de habilidades 
                             en programación, el analisis de datos en Python, R, SQL y en análisis técnico de los 
-                            mercados financieros.</span>
+                            mercados financieros de divisas, acciones commodities e indices bursatiles, Soy una persona enfocada en aprender cada día más nuevas habilidades
+                            que me enriquezcan a nivel profesional y personal,que cuenta con gran motivación
+                            y que se desempeña satisfactoriamente en el trabajo en equipo.</span>
             </div>
             
             <div class="info_contacto idiomas">
@@ -61,7 +53,11 @@
                 <ul>
                     <li>
                         <span class="icono"></span>
-                        <span class="texto">Cel: +57 3015784899</span>
+                        <span class="texto">Cel Personal: +57 3015784899</span>
+                    </li>
+                    <li>
+                        <span class="icono"></span>
+                        <span class="texto">Cel: +57 3007514194</span>
                     </li>
                     <li>
                         <span class="icono"></span>
@@ -69,7 +65,11 @@
                     </li>
                     <li>
                         <span class="icono"></span>
-                        <a class="texto" href="http://www.linkedin.com/in/alonso-jose-linero-gnecco-39b821160" target="self">Cuenta De Linkedin</a>
+                        <span class="texto">Email: ajlinero@uninorte.edu.co</span>
+                    </li>
+                    <li>
+                        <span class="icono"></span>
+                        <a class="texto" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwj5wpeVxP_zAhWitTEKHTADCF0QFnoECAUQAQ&url=https%3A%2F%2Fco.linkedin.com%2Fin%2Falonso-jose-linero-gnecco-39b821160&usg=AOvVaw0u3DXK8qD-lXMVKJoMoeA0" target="self">Cuenta De Linkedin</a>
                     </li>
                     <li>
                         <span class="icono"></span>
@@ -79,23 +79,29 @@
                         <span class="icono"></span>
                         <span class="texto">Santa Marta, Magdalena, Colombia</span>
                     </li>
+                    <li>
+                        <span class="icono"></span>
+                        <span class="texto">Avenida Libertador #29-29 conjunto villa sara 2</span>
+                    </li>
                 </ul>
             </div>
     </div>
 
         <div class="lado_derecho">
             <div class="sobre"> 
-                <h2 class="titulo2">Educacion</h2>
+                <h2 class="titulo2">Educacion Formal</h2>
                         <h4>2013 - 2020</h4>
                         <p>Pregrado En Economía</p>
-                        <p>Universidad Del Norte</p>
-                        <h4>2020 - 2020</h4>
-                        <p>Diplomado en Análisis Técnico</p>
-                        <p>Universidad Del Rosario / 21 Trading Coach</p>
-                        <h4>2021 - 2022</h4>
-                        <p>Diplomado en Programación</p>
-                        <p>Universidad Del Norte / Misión Tic 2022</p>
-                    
+                        <p>Universidad Del Norte</p> 
+            </div>
+            <div class="sobre"> 
+                <h2 class="titulo2">Educacion Adicional</h2>
+                <h4>2021 - 2022</h4>
+                <p>Diplomado en Programación</p>
+                <p>Universidad Del Norte / Misión Tic 2022</p>
+                <h4>2020 - 2020</h4>
+                <p>Diplomado en Análisis Técnico</p>
+                <p>Universidad Del Rosario / 21 Trading Coach</p>
             </div>
             <div class="sobre"> 
                 <h2 class="titulo2">Habilidades</h2>
@@ -105,7 +111,8 @@
                 <p>Microsoft Office (Word, Excel, Power point)</p>
                 <p>Estadística Descriptiva e inferencial</p>
                 <p>Manejo de Software estadistico Stata y R</p>
-                <p>Programación Estructurada, Funcional y Orientada a objetos en Python y java</p>
+                <p>Programación Estructurada, Funcional y Orientada a objetos en Python</p>
+                <p>Programación Basica en Frontend html5, Css y Javascript</p>
                 <p>Conocimiento Basico en Desarrollo usando el Framework Flask para Backend</p>               
                 <p>Conocimiento en Manejo de Bases de datos SQL</p>
                 <p>Conocimiento en Librerias De Análisis de datos En python Numpy, Pandas y Matplotlib</p>
@@ -117,7 +124,7 @@
             </div>
             <div class="sobre"> 
                 <h2 class="titulo2">Intereses</h2>
-                <p>Hacer Trading, Programar, Videojuegos,  Ver Plataformas de Streaming, Leer, Tocar piano, Educarme continuamente.</p>
+                <p>Hacer Trading, Programar, Videojuegos, Ver Plataformas de Streaming, Leer, Tocar piano, Educarme continuamente en habilidades profesionales.</p>
             </div>
             <div class="sobre"> 
                 <h2 class="titulo2">Credenciales</h2>
